# CAINN

./: CMakeLists.txt  NN-test.py  Neural_Network.py  README.md  Udacity-mnist.py  Udacity-temp-load.py  Udacity-temp.py  m-test.json  mnist-test.py  test.json  test.txt
.ipynb_checkpoints/: Recognizing-CIFAR-10-images-Simple-Model-checkpoint.ipynb  fashion-promo-checkpoint.ipynb  mnist-numbers-checkpoint.ipynb
include/: Activation_Function.h  Activation_Functions.h  Convolution_Layer.h  Dimensions.h  Dropout_Layer.h  Embedding_Layer.h  Flatten_Layer.h  Fully_Connected_Layer.h  Input_Layer.h  Loss.h  Maxpool_Layer.h  Network_Saver.h  Neural_Layer.h  Neural_Network.h  Output_Layer.h  Tensor.h  Thread_Pool.h  Vision.h
src/: Activation_Functions.cpp  Convolution_Layer.cpp  Dropout_Layer.cpp  Embedding_Layer.cpp  Flatten_Layer.cpp  Fully_Connected_Layer.cpp  Input_Layer.cpp  Loss.cpp  Maxpool_Layer.cpp  Network_Saver.cpp  Neural_Layer.cpp  Neural_Network.cpp  Neural_Network_Extension.cpp  Output_Layer.cpp  Tensor.cpp  Thread_Pool.cpp  Vision.cpp  main.cpp
